<resources>
    <string name="app_name">Unitech Scanner Utility</string>
    <string name="text_mobile_bt_address">Mobile BT address is </string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="scan_barcode_to_start_pairing">Scan the barcode to start pairing the scanner.</string>
    <string name="localInfo">MobileInfo</string>
    <string name="floatingInfo">FloatingInfo</string>
    <string name="default_floatingview_channel_id">Floating Button</string>
    <string name="floating_notification_title">Floating Button</string>
    <string name="floating_notification_content">Floating Button Content</string>
    <string name="enter_bluetooth_mac_address">Enter bluetooth mac address</string>
    <string name="defaultBtAddress">02:00:00:00:00:00</string>
    <string name="defaultIntentAction">USU_INTENT_DATA_ACTION</string>
    <string name="defaultIntentData">data</string>
    <string name="defaultIntentDataType">datatype</string>
    <string name="defaultIntentDataByte">databyte</string>
    <string name="defaultIntentDataLength">datalength</string>
    <string name="menu_Home">Home</string>
    <string name="menu_FindScanner">Find Scanner</string>
    <string name="menu_DataTesting">Scan Test</string>
    <string name="menu_ScannerConfig">Scanner Configurations</string>
    <string name="menu_AppSettings">Application Settings</string>
    <string name="menu_LabelFormatting">Label Formatting</string>
    <string name="menu_ResetAll">Reset All Settings</string>
    <string name="menu_QuickChart">Quick Settings Chart</string>
    <string name="menu_About">Application Information</string>
    <string name="menu_Exit">Exit</string>
    <string name="menu_Download">Download the Settings</string>
    <string name="menu_Upload">Upload the Settings</string>
    <string name="menu_Export">Export the Settings</string>
    <string name="menu_Import">Import the Settings</string>
    <string name="connectedDevice">Connected Scanner:</string>
    <string name="target_scanner_sn">Target Scanner SN:</string>
    <string name="target_scanner_status">Target Scanner Status:</string>
    <string name="scanner_name">Name</string>
    <string name="scanner_sn">Serial Number</string>
    <string name="scanner_bt_mac">Bluetooth</string>
    <string name="battery_status">Battery Status</string>
    <string name="fw_version">Firmware Version</string>
    <string name="scan_testing">Scan Testing:</string>
    <string name="scan">Scan</string>
    <string name="n_a">N/A</string>
    <string name="disconnect_device">Disconnect Scanner</string>
    <string name="config_OtherSettings">Other Settings</string>
    <string name="config_UPC_A">UPC-A</string>
    <string name="config_UPC_E">UPC-E</string>
    <string name="config_UPC_E1">UPC-E1</string>
    <string name="config_EAN_8">EAN-8/JAN-8</string>
    <string name="config_EAN_13">EAN-13/JAN-13</string>
    <string name="config_Bookland_EAN">Bookland EAN</string>
    <string name="config_Bookland_ISBN_Format">Bookland ISBN Format</string>
    <string name="config_ISSN_EAN">ISSN EAN</string>
    <string name="config_Transmit_UPC_A_Check_Digit">Transmit UPC-A Check Digit</string>
    <string name="config_Transmit_UPC_E_Check_Digit">Transmit UPC-E Check Digit</string>
    <string name="config_Transmit_UPC_E1_Check_Digit">Transmit UPC-E1 Check Digit</string>
    <string name="config_UPC_A_Preamble">UPC-A Preamble</string>
    <string name="config_UPC_E_Preamble">UPC-E Preamble</string>
    <string name="config_Convert_UPC_E_to_A">Convert UPC-E to UPC-A</string>
    <string name="config_Convert_UPC_E1_to_A">Convert UPC-E1 to UPC-A</string>
    <string name="config_EAN_8_JAN_8_Extend">EAN-8/JAN-8 Extend</string>
    <string name="config_UCC_Coupon_Extended_Code">UCC Coupon Extended Code</string>
    <string name="config_Trigger_Settings">Trigger Settings</string>
    <string name="config_Picklist_Mode">Pick list mode</string>
    <string name="config_Trigger_Modes">Trigger Modes</string>
    <string name="config_Decode_Session_Timeout">Decode Session Timeout</string>
    <string name="config_Security_Level">Security Level</string>
    <string name="config_Exposure_Settings">Exposure Settings</string>
    <string name="config_Decode_Aiming_Pattern">Decode Aiming Pattern</string>
    <string name="config_Decoding_Illumination">Decoding Illumination</string>
    <string name="config_Exposure_Mode">Exposure Mode</string>
    <string name="config_Fixed_Exposure_Time">Fixed Exposure Time</string>
    <string name="config_Low_Light_Motion_Detection_Assist">Low Light Motion Detection Assist</string>
    <string name="config_Transmit_Code_ID_Character">Transmit Code ID Character</string>
    <string name="config_Transmit_No_Read_Message">Transmit No Read Message</string>
    <string name="config_BT_signal_checking_level">BT Signal Checking Level</string>
    <string name="config_Password">Password</string>
    <string name="config_ChangeBtAddress">Change Mobile Bluetooth Address</string>
    <string name="config_StartUp">Start Up</string>
    <string name="config_AutoUploadSettings">Auto Enforce Settings</string>
    <string name="config_FloatingButton">Floating UI Button</string>
    <string name="config_LaunchApp">Launch application after connection</string>
    <string name="config_ReceiveDataSettings">Mobile Receive Data Settings</string>
    <string name="config_Scan2Key">Scan to Key Service</string>
    <string name="config_Clipboard">Save Data To Clipboard</string>
    <string name="config_OutputMethod">Output Method</string>
    <string name="config_InterCharTime">Each Charter Delay Time (ms)</string>
    <string name="config_Sound">Sound</string>
    <string name="config_Frequency">Frequency</string>
    <string name="config_SoundDuration">Sound Duration</string>
    <string name="config_Vibration">Vibration</string>
    <string name="config_DataAckSettings">Data Ack Settings</string>
    <string name="config_DataAckWithIndicator">Data Ack with indicator</string>
    <string name="config_IndicatorLed">Indicator(LED)</string>
    <string name="config_IndicatorVibrator">Indicator(Vibrator)</string>
    <string name="config_IndicatorBeep">Indicator(Beeper times)</string>
    <string name="config_DataIntentSettings">Data Intent Settings</string>
    <string name="config_DataAction">Intent Action</string>
    <string name="config_StringData">Extra Data Key</string>
    <string name="config_StringDataType">Extra DataType Key</string>
    <string name="config_StringDataLength">Extra DataLength Key</string>
    <string name="config_StringDataByte">Extra DataByte Key</string>
    <string name="config_EnableDataIntent">Enable Intent Extra</string>
    <string name="config_Encoding">Encoding</string>
    <string name="config_DataEditing">Data Editing</string>
    <string name="config_RemoveNonPrintableChar">Remove Non-Printable Character</string>
    <string name="config_UseFormatting">Use Formatting</string>
    <string name="config_Replace">Replace</string>
    <string name="config_Prefix">Prefix</string>
    <string name="config_Suffix">Suffix</string>
    <string name="config_Prefix_dialog_msg">Please enter the prefix of the data to be added. Support &#60;LF&#62;,&#60;CR&#62;,&#60;TAB&#62;.</string>
    <string name="config_Suffix_dialog_msg">Please enter the suffix of the data to be added. Support &#60;LF&#62;,&#60;CR&#62;,&#60;TAB&#62;.</string>
    <string name="config_Terminator">Terminator</string>
    <string name="config_Formatting">Formatting</string>
    <string name="setting_UPC_A">UPC-A</string>
    <string name="setting_UPC_E">UPC-E</string>
    <string name="setting_UPC_E1">UPC-E1</string>
    <string name="setting_EAN_8">EAN-8/JAN-8</string>
    <string name="setting_EAN_13">EAN-13/JAN-13</string>
    <string name="setting_Bookland_EAN">Bookland EAN</string>
    <string name="setting_Bookland_ISBN_Format">Bookland ISBN Format</string>
    <string name="setting_ISSN_EAN">ISSN EAN</string>
    <string name="setting_Decode_UPC_EAN_JAN_Supplementals">Decode UPC/EAN/JAN Supplementals</string>
    <string name="setting_Transmit_UPC_A_Check_Digit">Transmit UPC-A Check Digit</string>
    <string name="setting_Transmit_UPC_E_Check_Digit">Transmit UPC-E Check Digit</string>
    <string name="setting_Transmit_UPC_E1_Check_Digit">Transmit UPC-E1 Check Digit</string>
    <string name="setting_UPC_A_Preamble">UPC-A Preamble</string>
    <string name="setting_UPC_E_Preamble">UPC-E Preamble</string>
    <string name="setting_UPC_E1_Preamble">UPC-E1 Preamble</string>
    <string name="setting_Convert_UPC_E_to_A">Convert UPC-E to UPC-A</string>
    <string name="setting_Convert_UPC_E1_to_A">Convert UPC-E1 to UPC-A</string>
    <string name="setting_EAN_8_JAN_8_Extend">EAN-8/JAN-8 Extend</string>
    <string name="setting_UCC_Coupon_Extended_Code">UCC Coupon Extended Code</string>
    <string name="setting_Picklist_Mode">Pick list mode</string>
    <string name="setting_Trigger_Modes">Trigger Modes</string>
    <string name="setting_Decode_Session_Timeout">Decode Session Timeout</string>
    <string name="setting_Security_Level">Security Level</string>
    <string name="setting_Decode_Aiming_Pattern">Decode Aiming Pattern</string>
    <string name="setting_Decoding_Illumination">Decoding Illumination</string>
    <string name="setting_Exposure_Mode">Exposure Mode</string>
    <string name="setting_Fixed_Exposure_Time">Fixed Exposure Time</string>
    <string name="setting_Low_Light_Motion_Detection_Assist">Low Light Motion Detection Assist</string>
    <string name="setting_Transmit_Code_ID_Character">Transmit Code ID Character</string>
    <string name="setting_Transmit_No_Read_Message">Transmit No Read Message</string>
    <string name="setting_BT_signal_checking_level">BT Signal Checking Level</string>
    <string name="setting_Password">pref_password</string>
    <string name="setting_BtAddress">pref_btmac</string>
    <string name="setting_StartUp">pref_startup</string>
    <string name="setting_AutoEnforceSettings">pref_AutoEnforceSettings</string>
    <string name="setting_FloatingButton">pref_FloatingButton</string>
    <string name="setting_LaunchApp">pref_launch_app</string>
    <string name="setting_Clipboard">pref_clipboard</string>
    <string name="setting_Scan2key">pref_scan_to_key</string>
    <string name="setting_OutputMethod">pref_output_method</string>
    <string name="setting_InterCharTime">pref_interchar_time</string>
    <string name="setting_Sound">pref_sound</string>
    <string name="setting_Frequency">pref_sound_freq</string>
    <string name="setting_SoundDuration">pref_sound_duration</string>
    <string name="setting_Vibration">pref_vibration</string>
    <string name="setting_DataAckWithIndicator">pref_DataAckWithIndicator</string>
    <string name="setting_IndicatorLed">pref_led</string>
    <string name="setting_IndicatorVibrator">pref_vibrator</string>
    <string name="setting_IndicatorBeep">pref_beeper_times</string>
    <string name="setting_DataAction">pref_data_action</string>
    <string name="setting_StringData">pref_data</string>
    <string name="setting_StringDataType">pref_data_type</string>
    <string name="setting_StringDataLength">pref_data_length</string>
    <string name="setting_StringDataByte">pref_data_byte</string>
    <string name="setting_EnableDataIntent">pref_enable_data</string>
    <string name="setting_Encoding">pref_encoding</string>
    <string name="setting_RemoveNonPrintableChar">pref_removeNonPrintChar</string>
    <string name="setting_UseFormatting">pref_useFormatting</string>
    <string name="setting_Replace">pref_replace</string>
    <string name="setting_Prefix">pref_prefix</string>
    <string name="setting_Suffix">pref_suffix</string>
    <string name="setting_Terminator">pref_terminator</string>
    <string name="setting_Formatting">pref_formatting</string>
</resources>