<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/menu_AppSettings"
        android:icon="@drawable/menu_flag"
        >
    <EditTextPreference
        android:key="@string/setting_Password"
        android:title="@string/config_Password"
        android:dialogLayout="@layout/pref_dialog_edittext_password" />
    <Preference
        android:title="@string/config_ChangeBtAddress"
        android:key="@string/setting_BtAddress"
        android:summary="@string/defaultBtAddress"/>
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/setting_StartUp"
        android:title="@string/config_StartUp" />
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_encoding_titles"
        android:entryValues="@array/pref_encoding_values"
        android:key="@string/setting_LaunchApp"
        android:title="@string/config_LaunchApp"
       />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/setting_AutoEnforceSettings"
        android:title="@string/config_AutoUploadSettings" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/setting_FloatingButton"
            android:title="@string/config_FloatingButton" />
    </PreferenceCategory>
    <!--Receive data Settings-->
    <PreferenceCategory
        android:title="@string/config_ReceiveDataSettings"
        android:icon="@drawable/menu_flag"
       >
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/setting_Scan2key"
        android:title="@string/config_Scan2Key" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/setting_Clipboard"
        android:title="@string/config_Clipboard" />
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_output_method_titles"
        android:entryValues="@array/pref_output_method_values"
        android:key="@string/setting_OutputMethod"
        android:title="@string/config_OutputMethod"
        android:summary="%s"
        app:useSimpleSummaryProvider="true"
        android:dependency="@string/setting_Scan2key"/>
    <EditTextPreference
        android:defaultValue="0"
        android:key="@string/setting_InterCharTime"
        android:title="@string/config_InterCharTime"
        android:dialogLayout="@layout/pref_dialog_edittext_setting_four_integer"
        android:dependency="@string/setting_OutputMethod"
        android:summary="0"
        />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/setting_Sound"
        android:title="@string/config_Sound" />
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_sound_freq_titles"
        android:entryValues="@array/pref_sound_freq_values"
        android:key="@string/setting_Frequency"
        android:title="@string/config_Frequency"
        app:useSimpleSummaryProvider="true"
        android:summary="%s"
        android:dependency="@string/setting_Sound"
       />
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_sound_duration_titles"
        android:entryValues="@array/pref_sound_duration_values"
        android:key="@string/setting_SoundDuration"
        android:title="@string/config_SoundDuration"
        app:useSimpleSummaryProvider="true"
        android:summary="%s"
        android:dependency="pref_sound" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/setting_Vibration"
        android:title="@string/config_Vibration" />
    </PreferenceCategory>
    <!--DataAck Settings-->
    <PreferenceCategory
        android:title="@string/config_DataAckSettings"
        android:icon="@drawable/menu_flag"
      >
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/setting_DataAckWithIndicator"
        android:title="@string/config_DataAckWithIndicator"
        />
    <ListPreference
        android:defaultValue="none"
        android:entries="@array/pref_led_titles"
        android:entryValues="@array/pref_led_values"
        android:key="@string/setting_IndicatorLed"
        android:title="@string/config_IndicatorLed"
        app:useSimpleSummaryProvider="true"
        android:summary="%s"
        android:dependency="pref_DataAckWithIndicator"/>
    <ListPreference
        android:defaultValue="false"
        android:entries="@array/pref_vibrator_titles"
        android:entryValues="@array/pref_vibrator_values"
        android:key="@string/setting_IndicatorVibrator"
        android:title="@string/config_IndicatorVibrator"
        app:useSimpleSummaryProvider="true"
        android:summary="%s"
        android:dependency="pref_DataAckWithIndicator"/>
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_beeper_time_titles"
        android:entryValues="@array/pref_beeper_time_values"
        android:key="@string/setting_IndicatorBeep"
        android:title="@string/config_IndicatorBeep"
        app:useSimpleSummaryProvider="true"
        android:summary="%s"
        android:dependency="pref_DataAckWithIndicator"/>
    </PreferenceCategory>
    <!--Intent-->
    <PreferenceCategory
        android:title="@string/config_DataIntentSettings"
        android:icon="@drawable/menu_flag">
    <Preference
        android:defaultValue="@string/defaultIntentAction"
        android:summary="@string/defaultIntentAction"
        android:key="@string/setting_DataAction"
        android:title="@string/config_DataAction"
        />
    <Preference
        android:defaultValue="@string/defaultIntentData"
        android:summary="@string/defaultIntentData"
        android:key="@string/setting_StringData"
        android:title="@string/config_StringData"/>
        <Preference
            android:defaultValue="@string/defaultIntentDataType"
            android:summary="@string/defaultIntentDataType"
            android:key="@string/setting_StringDataType"
            android:title="@string/config_StringDataType"/>
        <Preference
            android:defaultValue="@string/defaultIntentDataLength"
            android:summary="@string/defaultIntentDataLength"
            android:key="@string/setting_StringDataLength"
            android:title="@string/config_StringDataLength"/>
        <Preference
            android:defaultValue="@string/defaultIntentDataByte"
            android:summary="@string/defaultIntentDataByte"
            android:key="@string/setting_StringDataByte"
            android:title="@string/config_StringDataByte"/>
    <MultiSelectListPreference
        android:dialogTitle="@string/config_EnableDataIntent"
        android:defaultValue="@array/pref_enable_intent_defaultValues"
        android:entries="@array/pref_enable_intent_titles"
        android:entryValues="@array/pref_enable_intent_values"
        android:key="@string/setting_EnableDataIntent"
        android:title="@string/config_EnableDataIntent"
        app:useSimpleSummaryProvider="true"
        android:summary="%s"
       />

<!--    <CheckBoxPreference-->
<!--        android:defaultValue="true"-->
<!--        android:summary="@string/defaultIntentDataType"-->
<!--        android:key="@string/setting_EnableDataType"-->
<!--        android:title="@string/config_EnableDataType"/>-->
<!--    <CheckBoxPreference-->
<!--        android:defaultValue="true"-->
<!--        android:summary="@string/defaultIntentDataLength"-->
<!--        android:key="@string/setting_EnableDataLength"-->
<!--        android:title="@string/config_EnableDataLength"/>-->
<!--    <CheckBoxPreference-->
<!--        android:defaultValue="false"-->
<!--        android:summary="@string/defaultIntentDataByte"-->
<!--        android:key="@string/setting_EnableDataByte"-->
<!--        android:title="@string/config_EnableDataByte"/>-->
    </PreferenceCategory>
</PreferenceScreen>