<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_enable_disable_titles"
        android:entryValues="@array/pref_enable_disable_values"
        android:key="@string/setting_UPC_A"
        android:title="@string/config_UPC_A"
        android:summary="%s" app:useSimpleSummaryProvider="true"/>
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_enable_disable_titles"
        android:entryValues="@array/pref_enable_disable_values"
        android:key="@string/setting_UPC_E"
        android:title="@string/config_UPC_E"
        android:summary="%s" app:useSimpleSummaryProvider="true"/>
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_enable_disable_titles"
        android:entryValues="@array/pref_enable_disable_values"
        android:key="@string/setting_UPC_E1"
        android:title="@string/config_UPC_E1"
        android:summary="%s" app:useSimpleSummaryProvider="true"/>
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_enable_disable_titles"
        android:entryValues="@array/pref_enable_disable_values"
        android:key="@string/setting_EAN_8"
        android:title="@string/config_EAN_8"
        android:summary="%s" app:useSimpleSummaryProvider="true"/>
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_enable_disable_titles"
        android:entryValues="@array/pref_enable_disable_values"
        android:key="@string/setting_EAN_13"
        android:title="@string/config_EAN_13"
        android:summary="%s" app:useSimpleSummaryProvider="true"/>

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_enable_disable_titles"
        android:entryValues="@array/pref_enable_disable_values"
        android:key="@string/setting_Bookland_EAN"
        android:title="@string/config_Bookland_EAN"
        android:summary="%s" app:useSimpleSummaryProvider="true"/>
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_Bookland_ISBN_Format_titles"
        android:entryValues="@array/pref_Bookland_ISBN_Format_values"
        android:key="@string/setting_Bookland_ISBN_Format"
        android:title="@string/config_Bookland_ISBN_Format"
        android:summary="%s" app:useSimpleSummaryProvider="true"/>
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_enable_disable_titles"
        android:entryValues="@array/pref_enable_disable_values"
        android:key="@string/setting_ISSN_EAN"
        android:title="@string/config_ISSN_EAN"
        android:summary="%s" app:useSimpleSummaryProvider="true"/>
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_DecodeUPC_EAN_JAN_Supplementals_titles"
        android:entryValues="@array/pref_DecodeUPC_EAN_JAN_Supplementals_values"
        android:key="@string/setting_Decode_UPC_EAN_JAN_Supplementals"
        android:title="@string/setting_Decode_UPC_EAN_JAN_Supplementals"
        android:summary="%s" app:useSimpleSummaryProvider="true"/>

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_enable_disable_titles"
        android:entryValues="@array/pref_enable_disable_values"
        android:key="@string/setting_Transmit_UPC_A_Check_Digit"
        android:title="@string/config_Transmit_UPC_A_Check_Digit"
        android:summary="%s" app:useSimpleSummaryProvider="true"/>
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_enable_disable_titles"
        android:entryValues="@array/pref_enable_disable_values"
        android:key="@string/setting_Transmit_UPC_E_Check_Digit"
        android:title="@string/config_Transmit_UPC_E_Check_Digit"
        android:summary="%s" app:useSimpleSummaryProvider="true"/>
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_enable_disable_titles"
        android:entryValues="@array/pref_enable_disable_values"
        android:key="@string/setting_Transmit_UPC_E1_Check_Digit"
        android:title="@string/config_Transmit_UPC_E1_Check_Digit"
        android:summary="%s" app:useSimpleSummaryProvider="true"/>

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_UPC_X_Preamble_titles"
        android:entryValues="@array/pref_UPC_X_Preamble_values"
        android:key="@string/setting_UPC_A_Preamble"
        android:title="@string/config_UPC_A_Preamble"
        android:summary="%s" app:useSimpleSummaryProvider="true"/>
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_UPC_X_Preamble_titles"
        android:entryValues="@array/pref_UPC_X_Preamble_values"
        android:key="@string/setting_UPC_E_Preamble"
        android:title="@string/config_UPC_E_Preamble"
        android:summary="%s" app:useSimpleSummaryProvider="true"/>
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_UPC_X_Preamble_titles"
        android:entryValues="@array/pref_UPC_X_Preamble_values"
        android:key="@string/setting_UPC_E1_Preamble"
        android:title="@string/setting_UPC_E1_Preamble"
        android:summary="%s" app:useSimpleSummaryProvider="true"/>

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_enable_disable_titles"
        android:entryValues="@array/pref_enable_disable_values"
        android:key="@string/setting_Convert_UPC_E_to_A"
        android:title="@string/config_Convert_UPC_E_to_A"
        android:summary="%s" app:useSimpleSummaryProvider="true"/>
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_enable_disable_titles"
        android:entryValues="@array/pref_enable_disable_values"
        android:key="@string/setting_Convert_UPC_E1_to_A"
        android:title="@string/config_Convert_UPC_E1_to_A"
        android:summary="%s" app:useSimpleSummaryProvider="true"/>


    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_enable_disable_titles"
        android:entryValues="@array/pref_enable_disable_values"
        android:key="@string/setting_EAN_8_JAN_8_Extend"
        android:title="@string/config_EAN_8_JAN_8_Extend"
        android:summary="%s" app:useSimpleSummaryProvider="true"/>

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_enable_disable_titles"
        android:entryValues="@array/pref_enable_disable_values"
        android:key="@string/setting_UCC_Coupon_Extended_Code"
        android:title="@string/config_UCC_Coupon_Extended_Code"
        android:summary="%s" app:useSimpleSummaryProvider="true"/>

</androidx.preference.PreferenceScreen>