<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="SettingsOfOther">
    <PreferenceCategory
        android:title="@string/config_Trigger_Settings"
        android:icon="@drawable/menu_flag">
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_picklist_mode_titles"
        android:entryValues="@array/pref_picklist_mode_values"
        android:key="@string/setting_Picklist_Mode"
        android:summary="%s"
        android:title="@string/config_Picklist_Mode" app:useSimpleSummaryProvider="true" />
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_trigger_mode_titles"
        android:entryValues="@array/pref_trigger_mode_values"
        android:key="@string/setting_Trigger_Modes"
        android:summary="%s"
        android:title="@string/config_Trigger_Modes" app:useSimpleSummaryProvider="true" />
    <EditTextPreference
        android:defaultValue="49"
        android:dialogMessage="input 5 to 49 (0.5 to 4.9 seconds )"
        android:key="@string/setting_Decode_Session_Timeout"
        android:dialogLayout="@layout/pref_dialog_edittext_setting_two_integer"
        android:title="@string/config_Decode_Session_Timeout" />
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_security_level_titles"
        android:entryValues="@array/pref_security_level_values"
        android:key="@string/setting_Security_Level"
        android:summary="%s"
        android:title="@string/config_Security_Level"  app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/config_Exposure_Settings"
        android:icon="@drawable/menu_flag">
    <ListPreference
        android:defaultValue="2"
        android:entries="@array/pref_enable_disable_titles"
        android:entryValues="@array/pref_Decode_Aiming_Pattern_values"
        android:key="@string/setting_Decode_Aiming_Pattern"
        android:summary="%s"
        android:title="@string/config_Decode_Aiming_Pattern" app:useSimpleSummaryProvider="true" />
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_enable_disable_titles"
        android:entryValues="@array/pref_enable_disable_values"
        android:key="@string/setting_Decoding_Illumination"
        android:summary="%s"
        android:title="@string/config_Decoding_Illumination"  app:useSimpleSummaryProvider="true"/>
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_exposure_mode_titles"
        android:entryValues="@array/pref_exposure_mode_values"
        android:key="@string/setting_Exposure_Mode"
        android:summary="%s"
        android:title="@string/config_Exposure_Mode" app:useSimpleSummaryProvider="true" />
    <EditTextPreference
        android:defaultValue="100"
        android:dialogMessage="input 1 to 9999 (1 to 9999 mini seconds )"
        android:dialogLayout="@layout/pref_dialog_edittext_setting_four_integer"
        android:key="@string/setting_Fixed_Exposure_Time"
        android:title="@string/config_Fixed_Exposure_Time" />
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_Low_Light_Scene_Detection_titles"
        android:entryValues="@array/pref_Low_Light_Scene_Detection_values"
        android:key="@string/setting_Low_Light_Motion_Detection_Assist"
        android:summary="%s"
        android:title="@string/config_Low_Light_Motion_Detection_Assist" app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/config_OtherSettings"
        android:icon="@drawable/menu_flag">

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_Transmit_Code_ID_Character_titles"
        android:entryValues="@array/pref_Transmit_Code_ID_Character_values"
        android:key="@string/setting_Transmit_Code_ID_Character"
        android:summary="%s"
        android:title="@string/config_Transmit_Code_ID_Character" app:useSimpleSummaryProvider="true" />
    <!--Low Light Scene Detection-->
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_enable_disable_titles"
        android:entryValues="@array/pref_enable_disable_values"
        android:key="@string/setting_Transmit_No_Read_Message"
        android:summary="%s"
        android:title="@string/config_Transmit_No_Read_Message" app:useSimpleSummaryProvider="true" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_bt_signal_checking_level_titles"
        android:entryValues="@array/pref_bt_signal_checking_level_values"
        android:key="@string/setting_BT_signal_checking_level"
        android:summary="%s"
        android:title="@string/config_BT_signal_checking_level"  app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>